Add cache configuration for webstart:jnlp-single

--- a/maven-build-caching-samples/webstart-project/pom.xml
+++ b/maven-build-caching-samples/webstart-project/pom.xml
@@ -69,5 +69,366 @@
         </configuration>
       </plugin>
     </plugins>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>com.gradle</groupId>
+          <artifactId>gradle-enterprise-maven-extension</artifactId>
+          <configuration>
+            <gradleEnterprise xmlns="https://www.gradle.com/gradle-enterprise-maven-project">
+              <plugins>
+                <plugin>
+                  <groupId>org.codehaus.mojo</groupId>
+                  <artifactId>webstart-maven-plugin</artifactId>
+                  <inputs>
+                    <fileSets>
+                      <fileSet>
+                        <name>templateDirectory</name>
+                        <normalization>IGNORED_PATH</normalization>
+                      </fileSet>
+                      <fileSet>
+                        <name>resourcesDirectory</name>
+                        <normalization>RELATIVE_PATH</normalization>
+                      </fileSet>
+                      <fileSet>
+                        <!-- used to find the keystore if the location is prefixed with classpath: -->
+                        <name>compileClassPath</name>
+                        <normalization>CLASSPATH</normalization>
+                      </fileSet>
+                    </fileSets>
+                    <properties>
+                      <property>
+                        <name>filenameMapping</name>
+                      </property>
+                      <property>
+                        <name>canUnsign</name>
+                      </property>
+                      <property>
+                        <name>codebase</name>
+                      </property>
+                      <property>
+                        <name>encoding</name>
+                      </property>
+                      <property>
+                        <name>excludeTransitive</name>
+                      </property>
+                      <property>
+                        <name>gzip</name>
+                      </property>
+                      <property>
+                        <name>libPath</name>
+                      </property>
+                      <property>
+                        <name>makeArchive</name>
+                      </property>
+                      <property>
+                        <name>outputJarVersions</name>
+                      </property>
+                      <property>
+                        <name>unsignAlreadySignedJars</name>
+                      </property>
+                      <property>
+                        <name>updateManifestEntries</name>
+                      </property>
+                      <property>
+                        <name>useUniqueVersions</name>
+                      </property>
+                    </properties>
+                    <ignoredProperties>
+                      <!-- Attaching the archive to the project does not work when using the cache -->
+                      <ignore>attachArchive</ignore>
+                      <!-- deprecated property is not used by the mojo implementation -->
+                      <ignore>keystore</ignore>
+                      <ignore>verbose</ignore>
+                      <!-- only used for logging -->
+                      <ignore>basedir</ignore>
+                      <ignore>localRepository</ignore>
+                      <ignore>project</ignore>
+                      <ignore>remoteRepositories</ignore>
+                    </ignoredProperties>
+                  </inputs>
+                  <iteratedProperties>
+                    <property>
+                      <name>dependencies</name>
+                      <inputs>
+                        <properties>
+                          <property>
+                            <name>includes</name>
+                          </property>
+                          <property>
+                            <name>excludes</name>
+                          </property>
+                        </properties>
+                      </inputs>
+                    </property>
+                    <property>
+                      <!-- JnlpExtensions extends JnlpConfig so we need to duplicate everthing from the jnlp property here -->
+                      <name>jnlpExtensions</name>
+                      <inputs>
+                        <fileSets>
+                          <fileSet>
+                            <!--
+                              Template is processed by velocity and has access to:
+                                - System properties
+                                - Maven project properties
+                              If a custom template is used and it accesses system properties or project properties, those have to be added as inputs
+                            -->
+                            <name>inputTemplateResourcePath</name>
+                            <normalization>IGNORED_PATH</normalization>
+                          </fileSet>
+                          <fileSet>
+                            <name>resources</name>
+                            <normalization>RELATIVE_PATH</normalization>
+                          </fileSet>
+                        </fileSets>
+                        <properties>
+                          <!-- JnlpConfig properties -->
+                          <property>
+                            <name>spec</name>
+                          </property>
+                          <property>
+                            <name>version</name>
+                          </property>
+                          <property>
+                            <name>j2seVersion</name>
+                          </property>
+                          <property>
+                            <name>allPermissions</name>
+                          </property>
+                          <property>
+                            <!-- File name of the jnlp file inside the output directory -->
+                            <name>outputFile</name>
+                          </property>
+                          <property>
+                            <name>offlineAllowed</name>
+                          </property>
+                          <property>
+                            <name>href</name>
+                          </property>
+                          <property>
+                            <name>mainClass</name>
+                          </property>
+                          <property>
+                            <name>type</name>
+                          </property>
+                          <property>
+                            <name>properties</name>
+                          </property>
+                          <property>
+                            <name>inputTemplate</name>
+                          </property>
+                          <!-- additional JnlpExntesion properties -->
+                          <property>
+                            <name>name</name>
+                          </property>
+                          <property>
+                            <name>title</name>
+                          </property>
+                          <property>
+                            <name>vendor</name>
+                          </property>
+                          <property>
+                            <name>homepage</name>
+                          </property>
+                          <property>
+                            <name>description</name>
+                          </property>
+                          <property>
+                            <name>includes</name>
+                          </property>
+                        </properties>
+                      </inputs>
+                    </property>
+                  </iteratedProperties>
+                  <nestedProperties>
+                    <property>
+                      <name>jnlp</name>
+                      <inputs>
+                        <fileSets>
+                          <fileSet>
+                            <name>inputTemplateResourcePath</name>
+                            <normalization>IGNORED_PATH</normalization>
+                          </fileSet>
+                          <fileSet>
+                            <name>resources</name>
+                            <normalization>RELATIVE_PATH</normalization>
+                          </fileSet>
+                        </fileSets>
+                        <properties>
+                          <property>
+                            <name>spec</name>
+                          </property>
+                          <property>
+                            <name>version</name>
+                          </property>
+                          <property>
+                            <name>j2seVersion</name>
+                          </property>
+                          <property>
+                            <name>allPermissions</name>
+                          </property>
+                          <property>
+                            <!-- File name of the jnlp file inside the output directory -->
+                            <name>outputFile</name>
+                          </property>
+                          <property>
+                            <name>offlineAllowed</name>
+                          </property>
+                          <property>
+                            <name>href</name>
+                          </property>
+                          <property>
+                            <name>mainClass</name>
+                          </property>
+                          <property>
+                            <name>type</name>
+                          </property>
+                          <property>
+                            <name>properties</name>
+                          </property>
+                          <property>
+                            <name>inputTemplate</name>
+                          </property>
+                        </properties>
+                      </inputs>
+                    </property>
+                    <property>
+                      <name>pack200</name>
+                      <inputs>
+                        <properties>
+                          <property>
+                            <name>enabled</name>
+                          </property>
+                          <property>
+                            <name>passFiles</name>
+                          </property>
+                        </properties>
+                      </inputs>
+                    </property>
+                    <property>
+                      <name>sign</name>
+                      <inputs>
+                        <fileSets>
+                          <fileSet>
+                            <name>workDirectory</name>
+                            <normalization>RELATIVE_PATH</normalization>
+                          </fileSet>
+                          <fileSet>
+                            <name>keystore</name>
+                            <normalization>IGNORED_PATH</normalization>
+                          </fileSet>
+                          <fileSet>
+                            <name>workingKeystore</name>
+                            <normalization>IGNORED_PATH</normalization>
+                          </fileSet>
+                        </fileSets>
+                        <properties>
+                          <property>
+                            <name>keyalg</name>
+                          </property>
+                          <property>
+                            <name>sigalg</name>
+                          </property>
+                          <property>
+                            <name>sigfile</name>
+                          </property>
+                           <property>
+                            <name>storepass</name>
+                          </property>
+                          <property>
+                            <name>keypass</name>
+                          </property>
+                          <property>
+                            <name>validity</name>
+                          </property>
+                          <property>
+                            <name>dnameCn</name>
+                          </property>
+                          <property>
+                            <name>dnameOu</name>
+                          </property>
+                          <property>
+                            <name>dnameL</name>
+                          </property>
+                          <property>
+                            <name>dnameSt</name>
+                          </property>
+                          <property>
+                            <name>dnameO</name>
+                          </property>
+                          <property>
+                            <name>dnameC</name>
+                          </property>
+                          <property>
+                            <name>alias</name>
+                          </property>
+                          <property>
+                            <name>verify</name>
+                          </property>
+                          <property>
+                            <name>maxMemory</name>
+                          </property>
+                          <property>
+                            <name>tsaLocation</name>
+                          </property>
+                          <property>
+                            <name>httpProxyHost</name>
+                          </property>
+                          <property>
+                            <name>httpProxyPort</name>
+                          </property>
+                          <property>
+                            <name>httpsProxyHost</name>
+                          </property>
+                          <property>
+                            <name>httpsProxyPort</name>
+                          </property>
+                          <!-- Add this as property if you explicitly configured it -->
+                          <!-- <property>
+                            <name>arguments</name>
+                          </property> -->
+                        </properties>
+                        <ignoredProperties>
+                          <ignore>verbose</ignore>
+                          <ignore>securityDispatcher</ignore>
+                        </ignoredProperties>
+                      </inputs>
+                      <nestedProperties>
+                        <property>
+                          <name>keystoreConfig</name>
+                          <inputs>
+                            <properties>
+                              <property>
+                                <name>delete</name>
+                              </property>
+                              <property>
+                                <name>gen</name>
+                              </property>
+                            </properties>
+                          </inputs>
+                        </property>
+                      </nestedProperties>
+                    </property>
+                  </nestedProperties>
+                  <outputs>
+                    <cacheableBecause>Signing artifacts is CPU-bound</cacheableBecause>
+                    <files>
+                      <file>
+                        <name>archive</name>
+                      </file>
+                    </files>
+                    <directories>
+                      <directory>
+                        <name>workDirectory</name>
+                      </directory>
+                    </directories>
+                  </outputs>
+                </plugin>
+              </plugins>
+            </gradleEnterprise>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
   </build>
 </project>
