Add sample project for clojure-maven-plugin

--- a/maven-build-caching-samples/pom.xml
+++ b/maven-build-caching-samples/pom.xml
@@ -15,6 +15,7 @@
     <module>spotbugs-project</module>
     <module>antlr3-project</module>
     <module>webstart-project</module>
+    <module>clojure-project</module>
   </modules>
 
   <properties>
