Add example project for asciidoctor-maven-plugin

--- a/maven-build-caching-samples/pom.xml
+++ b/maven-build-caching-samples/pom.xml
@@ -16,6 +16,7 @@
     <module>antlr3-project</module>
     <module>webstart-project</module>
     <module>clojure-project</module>
+    <module>asciidoctor-project</module>
   </modules>
 
   <properties>
