Add cache configuration for enforce-bytecode-version

--- a/maven-build-caching-samples/enforcer-project/pom.xml
+++ b/maven-build-caching-samples/enforcer-project/pom.xml
@@ -57,6 +57,88 @@
         </dependencies>
       </plugin>
     </plugins>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>com.gradle</groupId>
+          <artifactId>gradle-enterprise-maven-extension</artifactId>
+          <configuration>
+            <gradleEnterprise>
+              <plugins>
+                <plugin>
+                  <groupId>org.apache.maven.plugins</groupId>
+                  <artifactId>maven-enforcer-plugin</artifactId>
+                  <executions>
+                    <execution>
+                      <id>enforce-bytecode-version</id>
+                      <inputs>
+                        <ignoredProperties>
+                          <ignore>commandLineRules</ignore>
+                          <ignore>fail</ignore>
+                          <ignore>failFast</ignore>
+                          <ignore>ignoreCache</ignore>
+                          <ignore>mojoExecution</ignore>
+                          <ignore>session</ignore>
+                          <ignore>skip</ignore>
+                        </ignoredProperties>
+                      </inputs>
+                      <iteratedProperties>
+                        <property>
+                          <name>rules</name>
+                          <inputs>
+                            <properties>
+                              <property>
+                                <name>maxJdkVersion</name>
+                              </property>
+                              <property>
+                                <name>maxJavaMajorVersionNumber</name>
+                              </property>
+                              <property>
+                                <name>ignoredScopes</name>
+                              </property>
+                              <property>
+                                <name>ignoreClasses</name>
+                              </property>
+                              <property>
+                                <name>ignoreOptionals</name>
+                              </property>
+                              <property>
+                                <name>excludes</name>
+                              </property>
+                            </properties>
+                          </inputs>
+                        </property>
+                      </iteratedProperties>
+                      <nestedProperties>
+                        <property>
+                          <name>project</name>
+                          <iteratedProperties>
+                            <property>
+                              <name>artifacts</name>
+                              <inputs>
+                                <fileSets>
+                                  <fileSet>
+                                    <name>file</name>
+                                    <normalization>COMPILE_CLASSPATH</normalization>
+                                  </fileSet>
+                                </fileSets>
+                              </inputs>
+                            </property>
+                          </iteratedProperties>
+                        </property>
+                      </nestedProperties>
+                      <outputs>
+                        <cacheableBecause>it's slow</cacheableBecause>
+                      </outputs>
+                    </execution>
+                  </executions>
+                </plugin>
+              </plugins>
+            </gradleEnterprise>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
   </build>
 
 </project>
