Add sample project for spring-cloud-contract-maven-plugin

--- a/maven-build-caching-samples/pom.xml
+++ b/maven-build-caching-samples/pom.xml
@@ -20,6 +20,7 @@
     <module>animal-sniffer-project</module>
     <module>enforcer-project</module>
     <module>exec-yarn-project</module>
+    <module>spring-cloud-contract-project</module>
   </modules>
 
   <properties>
